// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Artist Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <a
      href="#/artist/whateverId"
    >
      <article
        class=" svelte-fggesx"
      >
        <div
          class="content svelte-fggesx"
        >
          <img
            alt="./avatar.jpg"
            class="w-64 h-64 text-3xl svelte-hn7eai rounded-full"
            loading="lazy"
            src="./avatar.jpg#nonce=0.1"
          />
           
          
           
          <p
            class="controls svelte-fggesx"
          >
            <button
              class="svelte-ztyk6h primary iconOnly large"
              data-testid="play"
            >
              <i
                class="material-icons svelte-ztyk6h"
              >
                play_arrow
              </i>
               
            </button>
             
            <button
              class="svelte-ztyk6h primary iconOnly large"
              data-testid="enqueue"
            >
              <i
                class="material-icons svelte-ztyk6h"
              >
                playlist_add
              </i>
               
            </button>
          </p>
        </div>
         
        <header
          class="svelte-fggesx"
        >
          <h3>
            Foo Fighters
          </h3>
           
          <h4
            class="svelte-fggesx"
          >
            2 albums
          </h4>
        </header>
      </article>
    </a>
  </div>
</section>
`;

exports[`Storyshots Components/Artist No Albums 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <a
      href="#/artist/whateverId"
    >
      <article
        class=" svelte-fggesx"
      >
        <div
          class="content svelte-fggesx"
        >
          <img
            alt="./avatar.jpg"
            class="w-64 h-64 text-3xl svelte-hn7eai rounded-full"
            loading="lazy"
            src="./avatar.jpg#nonce=0.1"
          />
           
          
           
          <p
            class="controls svelte-fggesx"
          >
            <button
              class="svelte-ztyk6h primary iconOnly large"
              data-testid="play"
            >
              <i
                class="material-icons svelte-ztyk6h"
              >
                play_arrow
              </i>
               
            </button>
             
            <button
              class="svelte-ztyk6h primary iconOnly large"
              data-testid="enqueue"
            >
              <i
                class="material-icons svelte-ztyk6h"
              >
                playlist_add
              </i>
               
            </button>
          </p>
        </div>
         
        <header
          class="svelte-fggesx"
        >
          <h3>
            Foo Fighters
          </h3>
           
        </header>
      </article>
    </a>
  </div>
</section>
`;
